compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__use___invalid_call_is_number.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 70
expression: "\nuse <- 123\n123\n"
---
error: Invalid use expression
  ┌─ /src/one/two.gleam:2:8
  │
2 │ use <- 123
  │        ^^^ This must be a function call


